<resources>
    <string name="app_name">MiniMap</string>
    <string name="welcome_title">MiniMap</string>
    <string name="welcome_subtitle">Sign in or create an account to get started.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username (Optional)</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="logout">Logout</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="welcome_message">Welcome to your MiniMap Dashboard</string>
    <string name="registration_credentials">Registration Credentials</string>
</resources>
